# testprojects

TestClient/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
TestServer/: .gitignore  CMakeLists.txt  main.cpp  testserver.cpp  testserver.h
